--- a/templates/index.html
+++ b/templates/index.html
@@ -131,7 +131,7 @@
 
 <body>
     <div class="container">
-        <h1>Flask + MySQL App updated1</h1>
+        <h1>Flask + MySQL App - 02 tier application</h1>
 
         <div class="messages">
             {% for message in messages %}
