--- a/templates/index.html
+++ b/templates/index.html
@@ -131,7 +131,7 @@
 
 <body>
     <div class="container">
-        <h1>Flask + MySQL App - [02 Tier] App with MYSQL & Flask</h1>
+        <h1> Flask + MySQL App - [02 Tier] Application with MYSQL & Flask</h1>
 
         <div class="messages">
             {% for message in messages %}
